# vault-lambda-rs

./: Cargo.toml  openapi.yml
src/: error.rs  main.rs
src/archive/: mod.rs  model.rs  routes.rs
src/common/: mod.rs  routes.rs
src/entry/: mod.rs  model.rs  routes.rs
src/entryproto/: mod.rs  model.rs  routes.rs
src/record/: mod.rs  model.rs  routes.rs
src/task/: mod.rs  model.rs  routes.rs
src/taskproto/: mod.rs  model.rs  routes.rs
src/utils/: time.rs
src/web/: mod.rs
src/web/entry/: model.rs  routes.rs
src/web/entryproto/: routes.rs
src/web/task/: model.rs  routes.rs
src/web/tasklist/: mod.rs  model.rs  routes.rs
src/web/taskproto/: model.rs  routes.rs
