[package]
name = "vault-lambda-rs"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.80"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.16.0", features = ["behavior-version-latest"] }
axum = "0.7.4"
chrono = "0.4.34"
chrono-tz = "0.9.0"
lambda_http = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.114"

tokio = { version = "1", features = ["macros", "full"] }

